# FastAPI-TDD-Starter-Template

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py
tests/: conftest.py
