[tool.poetry]
name = "FastAPI TDD Starter Template"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
pytest = "^7.2.1"
uvicorn = "^0.20.0"
httpx = "^0.23.3"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
